[ruby/io-console] Set `OPOST` when `intr` is true

To enable implementation-defined output processing, for the
compatibility with readline.  [Bug #16509]

https://bugs.ruby-lang.org/issues/16509

https://github.com/ruby/io-console/commit/8c8b0b6757